Finish up the video popup work so that any page can use it. - Fix things to use existing code that opens fb/twitter links in new window. - Make that code work even in modals that aren't available at DocumentReady. - Add new partial that shows a video thumbnail and play button, with clicks opening video modal. - Make sure the video modal works responsively on IE8 on all pages on the site. - Works for both code.org and csedweek.org.

--- a/pegasus/sites.v3/code.org/styles/040-page.css
+++ b/pegasus/sites.v3/code.org/styles/040-page.css
@@ -739,3 +739,7 @@ label {
     line-height: 16px;
   }
 }
+
+.video_caption_link {
+  font-family: 'Gotham 5r', sans-serif;
+}
